objects/vlocity_cmt__PricingPlanStep__c.object
<CustomObject>
    <description>Defines steps in a Vlocity Pricing Plan which defines the pricing methods called by the Vlocity CPQ PricingPlanService implementation.</description>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ImplementationName__c</fullName>
        <label>Implementation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MethodName__c</fullName>
        <label>Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Parameters__c</fullName>
        <label>Parameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingPlanId__c</fullName>
        <label>Pricing Plan</label>
        <referenceTo>vlocity_cmt__PricingPlan__c</referenceTo>
        <relationshipLabel>Pricing Plan Steps</relationshipLabel>
        <relationshipName>PricingPlanSteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Pricing Plan Step</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Plan Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>